--- a/Embedded/.obsidian/workspace
+++ b/Embedded/.obsidian/workspace
@@ -4,15 +4,11 @@
     "type": "split",
     "children": [
       {
-        "id": "04f94a1005b3de0d",
+        "id": "72c767a99d7d3886",
         "type": "leaf",
         "state": {
-          "type": "markdown",
-          "state": {
-            "file": "FMC.md",
-            "mode": "source",
-            "source": false
-          }
+          "type": "empty",
+          "state": {}
         }
       }
     ],
@@ -69,7 +65,6 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "FMC.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -87,7 +82,7 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "04f94a1005b3de0d",
+  "active": "72c767a99d7d3886",
   "lastOpenFiles": [
     "FMC.md",
     "ADC.md"
