--- a/Embedded/.obsidian/workspace
+++ b/Embedded/.obsidian/workspace
@@ -7,8 +7,12 @@
         "id": "72c767a99d7d3886",
         "type": "leaf",
         "state": {
-          "type": "empty",
-          "state": {}
+          "type": "markdown",
+          "state": {
+            "file": "Bluetooth low energy.md",
+            "mode": "source",
+            "source": false
+          }
         }
       }
     ],
@@ -65,6 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
+                "file": "Bluetooth low energy.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -84,6 +89,7 @@
   },
   "active": "72c767a99d7d3886",
   "lastOpenFiles": [
+    "Bluetooth low energy.md",
     "FMC.md",
     "ADC.md"
   ]
