--- a/Embedded/.obsidian/workspace
+++ b/Embedded/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Bluetooth low energy.md",
+            "file": "GATT.md",
             "mode": "source",
             "source": false
           }
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Bluetooth low energy.md",
+                "file": "GATT.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -89,6 +89,7 @@
   },
   "active": "72c767a99d7d3886",
   "lastOpenFiles": [
+    "GATT.md",
     "Bluetooth low energy.md",
     "FMC.md",
     "ADC.md"
